@@ -55,7 +55,6 @@ class tx_reports_Module extends t3lib_SCbase {
 			t3lib_extMgm::extPath('reports') . 'mod/mod_template.html'
 		);
 		$this->doc->backPath = $GLOBALS['BACK_PATH'];
-		$this->doc->getPageRenderer()->loadScriptaculous('effects');
 		$this->doc->addStyleSheet(
 			'tx_reports',
 			'../' . t3lib_extMgm::siteRelPath('reports') . 'mod/mod_styles.css'
@@ -111,29 +110,6 @@ class tx_reports_Module extends t3lib_SCbase {
 				function jumpToUrl(URL) {
 					document.location = URL;
 				}
-				var state;
-				Event.observe(document, "dom:loaded", function(){
-					$$("h2.section-header").invoke("observe", "click", function(event){
-						var item = Event.element(event);
-							// possible icon inside h2
-						if (item.hasClassName("t3-icon")) {
-							item = item.up("h2");
-						}
-						if (item.hasClassName("expanded")) {
-							item.removeClassName("expanded").addClassName("collapsed");
-							Effect.BlindUp(item.next("div"), {duration : 0.5});
-							state = 1;
-						} else {
-							item.removeClassName("collapsed").addClassName("expanded");
-							Effect.BlindDown(item.next("div"), {duration : 0.5});
-							state = 0;
-						}
-						event.stop();
-						new Ajax.Request("ajax.php", {
-							parameters : "ajaxID=Reports::saveCollapseState&item=" + item.id + "&state=" + state
-						});
-					});
-				});
 			';
 			$this->doc->postCode='
 				<script language="javascript" type="text/javascript">
